--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "*.js": ["npm run format-code", "git add"]
+    "*.js": [
+      "npm run format-code",
+      "git add"
+    ]
   },
   "jest": {
     "preset": "jest-expo"
@@ -26,6 +29,7 @@
     "react-native-web": "^0.11.4"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.3",
